@@ -138,9 +138,8 @@ Abspielen von Video und Multimediadateien ebenso wie Grafikbearbeitungsprogramme
 oder das DeskTopPublishing Programm Scribus enthalten.</p>
  
 
-<p>Programme zum OCR-Prozess d&uuml;rfen da ebenso
-wenig fehlen wie ein Programm zur Visualisierung von Gedanken und Prozessen
-(KDissert). Es gibt noch viele mehr. </p>
+<p>Auch ein Programm zur Visualisierung von Gedanken und Prozessen
+(vym) ist integriert. Es gibt noch viele mehr. </p>
 
 
 <p>F&uuml;r die meisten "Lehrerarbeiten" m&uuml;ssten diese Anwendungen
@@ -324,25 +323,26 @@ Teile des Bildes z.B. einen Link enthalten k&ouml;nnen.</dd>
   <dd>&nbsp;</dd>
 
 
-<!--VLC-->
+<!--Kaffeine-->
 
 
-  <dd class="bold">VLC</dd>
+  <dd class="bold">Kaffeine</dd>
 
-  <dd>Der VLC Media Player (anf&auml;nglich VideoLAN Client) ist ein hoch portabler,
+  <dd>Der Kaffeine Media Player ist ein hoch portabler,
 freier Medienspieler sowohl f&uuml;r diverse Audio- und Videocodecs und
-Dateiformate, als auch DVDs, VCDs. </dd>
+Dateiformate, als auch DVDs und VCDs. </dd>
 
-  <dd>VLC unterst&uuml;tzt unterschiedliche Streaming-Protokolle.</dd>
+  <dd>Kaffeine unterst&uuml;tzt unterschiedliche Streaming-Protokolle.</dd>
 
-  <dd class="italicgrey">Steht auch unter anderen Betriebssystemen zur Verf&uuml;gung.</dd>
+<!-- <dd class="italicgrey">Steht auch unter anderen Betriebssystemen zur Verf&uuml;gung.</dd>  -->
 
 </dl>
 
 
 <dl>
-  <dt><a href="http://www.videolan.org/vlc/" target="_blank">VLC
-- Mediaplayer</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://www.videolan.org/doc/" target="_blank">Info VLC</a></dt>
+  <dt><a href="http://kaffeine.kde.org/" target="_blank">Kaffeine
+- Mediaplayer - Homepage und Information (Englisch)- das Programm Kaffeine hat eine eigene deutschsprachige Hilfe</a></dt>
+
 
 
   <dd>&nbsp;</dd>
@@ -385,11 +385,11 @@ f&uuml;r Windows, Mac OS X, GNU/Linux und andere Betriebssysteme.</dd>
   <dd>&nbsp;</dd>
 
 
-<!--KDissert-->
+<!--vym-->
 
-  <dd class="bold">KDissert</dd>
+  <dd class="bold">vym</dd>
 
-  <dd>Programm aus dem KDE-Projekt, mit dessen Hilfe man Mindmaps
+  <dd>...mit dessen Hilfe man Mindmaps
 (hier ein kleines <a target="_self" href="beispiele/erstversuch.kdi">Beispiel</a>)
 erstellen kann.</dd>
 
@@ -403,7 +403,10 @@ in die Mindmap ein und bearbeiten Sie die "Gedankenkarte".</dd>
 
 
 <dl>
-  <dt><a href="http://freehackers.org/%7Etnagy/kdissert/" target="_blank">KDissert</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://www.linux-user.de/ausgabe/2005/07/060-mindmapper/index_html?print=y" target="_blank">Info KDissert</a></dt>
+ <!--<dt><a href="http://freehackers.org/%7Etnagy/kdissert/" target="_blank">KDissert</a>
+#&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://www.linux-user.de/ausgabe/2005/07/060-mindmapper/index_html?print=y"  target="_blank">Info KDissert</a></dt>-->
+
+<dt><a href="http://www.insilmaril.de/vym/" target="_blank">vym (view your mind)</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://www.clemens-kraus.de/vym/index.htm" target="_blank">Info vym</a></dt>
 
 
   <dd>&nbsp;</dd>
