@@ -135,7 +135,7 @@ vertreten.</p>
 <p>Compiler f&uuml;r verschiedene Programmiersprachen sind verf&uuml;gbar: Die
 <a href="http://gcc.gnu.org/" target="_blank">GNU Compiler Collection (GCC)</a>
 enth&auml;lt Compiler f&uuml;r C, C++, Objective C, Java, Ada, Fortran, 
-<a href="http://www.gnu-pascal.de">Pascal</a>. Darüber hinaus ist u.a. <a href="http://wiki.lazarus.freepascal.org/index.php/Main_Page/de">Freepascal/Lazarus</a> verfügbar, eine Programmierumgebung ähnlich Delphi® und dazu weitgehend kompatibel. Hinzu kommen Skriptsprachen wie
+<a href="http://www.gnu-pascal.de">Pascal</a>. Dar&uuml;ber hinaus ist u.a. <a href="http://wiki.lazarus.freepascal.org/index.php/Main_Page/de">Freepascal/Lazarus</a> verf&uuml;gbar, eine Programmierumgebung &auml;hnlich Delphi® und dazu weitgehend kompatibel. Hinzu kommen Skriptsprachen wie
 z.B. <a href="http://www.perl-archiv.de/" target="_blank">perl</a> oder
 <a href="http://www.python.org/" target="_blank">python</a>.</p>
 
@@ -204,6 +204,8 @@ Unter dem Men&uuml;punkt "Seminarix" finden Sie im Untermen&uuml; "Informatik" d
 </dl>
 
 <!--Kivio-->
+
+<dl>
 
   <dd class="bold">Kivio</dd>
 
