@@ -196,21 +196,22 @@ Aus diesen Gründen musste daher aus Platzgründen auf einige Pakete verzichtet 
 <p><span class="bold">Mitwirkende des sidux-seminarix-Projektes:</span></p>
 
 <p>
-Thomas Kross (captagon)<br />
-Roland Engert (RoEn)<br />
-Björn Jilg (BlueShadow)<br />
-hendrik <br />
-Dinko Sabo (cobra)<br />
-Fabian Wuertz (xadras)<br />
-Wolf-Dieter Zimmermann (emile)<br />
+Thomas Kross (captagon)<br>
+Roland Engert (RoEn)<br>
+Björn Jilg (BlueShadow)<br>
+Ferdi Thommes (devil)<br>
+Hendrik Lehmbruch (hendrikL) <br>
+Dinko Sabo (cobra)<br>
+Fabian Wuertz (xadras)<br>
+Wolf-Dieter Zimmermann (emile)<br>
 </p>
 <p>Besonderer Dank geht an das gesamte sidux-Entwicklerteam, dessen hervorragende Leistung dieses Projekt erst möglich gemacht hat.</p>
 <p>&nbsp;</p>
 <p>Weitere Informationen zur Installation von Seminarix finden Sie in den Manual-Pages von sidux.</p>
-<p><a href="/usr/share/sidux-manual/de/welcome-de.htm" target="_blank">sidux-manual deutsch</a><br />
+<p><a href="/usr/share/sidux-manual/de/welcome-de.htm" target="_blank">sidux-manual deutsch</a><br>
 <a href="/usr/share/sidux-manual/en/welcome-en.htm" target="_blank">sidux-manual english</a></p>
-<p><a href="http://sidux.com/index.php?module=pnWikka&tag=Startseite" target="_blank">sidux-Wiki deutsch</a><br />
-<a href="http://sidux.com/index.php?module=pnWikka&tag=Homepage" target="_blank">sidux-Wiki english</a>
+<p><a href="http://sidux.com/index.php?module=pnWikka&#038;tag=Startseite" target="_blank">sidux-Wiki deutsch</a><br>
+<a href="http://sidux.com/index.php?module=pnWikka&#038;tag=Homepage" target="_blank">sidux-Wiki english</a>
 </p>
 <!--in der seite nach oben-->
 <dl>
